     * Change SUF/SLF names to [filter]/[filter_location] and variants thereof
     * Add optional SUF to Healer Support MAI
 * Campaigns:
   * Descend into Darkness:
     * Fix the surviving orc leader starting poisoned after scenario 5.
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Indonesian, Italian, Polish,
     Portuguese, Russian, Vietnamese
 * User interface:
   * Fixed (bug #17220): Cursor in gui2 text box now behaves appropriately after
     text box overflow occurs.
   * Change Difficulty checkbox in Load Game dialog in GUI1 gets disabled if
     change in difficulty of a loading game won't take effect (bug #20381).
   * Fixed 'end turn' button's state issue: button stays disabled after the first turn.
   * Fixed bug #20592: dialog (wml_message.cfg) is shifted by the
     distance between the left edge of the screen and the game map
 * WML engine:
   * Fixed invalid memory access issues caused by subnamespaced persistent WML
     variables (bug #20385).
   * fix negative gold carried over (bug #20676)
   * Allow filtering on controller= in SSFs. Cannot be used in networked multiplayer.
   * When controller in 'side' tag is ai, use 'no' as default value
     for 'allow_player' attribute.
 * Miscellaneous and bug fixes
   * Switched to git version control. Hosting moved to SourceForge
   * Improved: Autorevision based revision numbers in CMake.
   * Don't let petrified units reveal ambushers

Version 1.11.2:
 * Add-ons client:
   * Fixed bug #20518: identical add-ons titles not supported
   * Add a button to the Filter Options dialog to toggle all currently
     displayed add-on categories at once
 * AI:
   * Experimental Multiplayer AI
     * Improve recruitment, notably first turn choices and units with poison
       and charge
     * Improved selection of units for village stealing
     * Remove dependency on AI-demos add-on
     * Fix bug when playing on maps with a turn limit
     * Fix bug handling regeneration